syntax = "proto3";

package comm;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "api/comm/base.proto";
option go_package = "github.com/realotz/whole/api/admin/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.comm";
option java_outer_classname = "EmployeeProtoV1";

//账户服务
service EmployeeService {
  //常规账户登录接口
  rpc Login (EmployeeLogin) returns (EmployeeLoginRes)  {
    option (google.api.http) = {
      post: "/admin/employee/login",
    };
  }
  //验证码登录
  rpc LoginForCode (EmployeeLogin) returns (EmployeeLoginRes)  {
    option (google.api.http) = {
      post: "/admin/employee/login-code",
    };
  }
  //登出
  rpc Logout (comm.NullReq) returns (comm.NullReply)  {
    option (google.api.http) = {
      post: "/admin/employee/logout",
    };
  }
  //当前登录用户信息
  rpc UserInfo (comm.NullReq) returns (Employee)  {
    option (google.api.http) = {
      get: "/admin/employee/info",
    };
  }
  //发送短信/邮箱验证码
  rpc Captcha(CaptchaReq)returns(comm.NullReply){
    option (google.api.http) = {
      get: "/admin/employee/captcha",
    };
  }
  //账户列表
  rpc List (EmployeeListOption) returns (EmployeeList)  {
    option (google.api.http) = {
      get: "/admin/employee",
    };
  }
  //获取账户信息
  rpc Get (EmployeeGetOption) returns (Employee)  {
    option (google.api.http) = {
      get: "/admin/employee/{id}",
    };
  }
  //新建一个账户
  rpc Create (EmployeeOption) returns (Employee)  {
    option (google.api.http) = {
      post: "/admin/employee",
    };
  }
  //更新一个账户
  rpc Update (EmployeeOption) returns (Employee)  {
    option (google.api.http) = {
      put: "/admin/employee",
    };
  }
  //删除一个账户
  rpc Delete (EmployeeDeleteOption) returns (comm.NullReply)  {
    option (google.api.http) = {
      delete: "/admin/employee/{id}",
    };
  }
}


//用户登录
message EmployeeLogin{
  // 账户
  string account = 1;
  // 密码
  string password = 2;
  // 验证码
  string captcha = 3;
  // 短信、邮箱 验证码
  string code = 4;
}

//登录返回
message EmployeeLoginRes{
  // jwt token
  string token = 1;
  // 角色
  string role = 2;
  // 过期时间 字符串时间戳
  int64 expiration_time = 3;
  // 用户信息
  Employee employee = 4;
}

message EmployeeListOption {
  //名称昵称筛选
  string name = 1;
  //标签筛选
  string tag = 2;
  //邮箱筛选
  string email = 3;
  //手机筛选
  string mobile = 4;
  //性别筛选
  string sex = 5;
  //角色筛选
  string role = 6;
  //用户类型筛选
  string type = 7;
  //创建时间筛选
  string create_time = 8;
}

message EmployeeGetOption{
  int64 id=1;
}

message EmployeeOption {
  // 姓名
  string name = 1;
  // 账户
  string account = 2;
  // 昵称
  string nick_name = 4;
  // 角色
  string role = 5;
  // 邮箱
  string email = 6;
  // 手机
  string mobile = 7;
  // 身份证
  string id_card = 8;
  // 密码
  string password = 9;
  // 性别
  string sex = 10;
  // 生日
  google.protobuf.Timestamp birthday = 11;
  // id
  int64 id = 12;
  // 头像
  string avatar=13;
}

message EmployeeDeleteOption {
  repeated int64 ids = 1;
}

message EmployeeList {
  //用户列表
  repeated Employee list =1;
  int64 total = 2;
  uint32 page=3;
  uint32 page_size=4;
}

// 用户信息
message Employee{
  int64 id = 1;
  string uuid = 2;
  // 姓名
  string name = 3;
  // 账户
  string account = 4;
  // 昵称
  string nick_name = 5;
  // 角色
  string role = 6;
  // 邮箱
  string email = 7;
  // 手机
  string mobile = 8;
  // 身份证
  string id_card = 9;
  // 性别
  string sex = 11;
  //生日
  google.protobuf.Timestamp birthday = 12;
  //最后登录ip
  string last_ip = 13;
  //最后登录时间
  google.protobuf.Timestamp last_time = 14;
  //创建时间
  google.protobuf.Timestamp create_time = 15;
  //更新时间
  google.protobuf.Timestamp update_time = 16;
  //头像
  string avatar=17;
}


//短信验证码
message CaptchaReq{
  //接收对象 email
  string to=1;
  //本地验证码
  string captcha=2;
  //极验预留
  string challenge=3;
  //极验预留
  string tk=4;
}
