syntax = "proto3";

package users.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
option go_package = "github.com/realotz/whole/api/users/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.users.v1";
option java_outer_classname = "CustomerProtoV1";

//客户用户服务
service CustomerService {
  //常规账户登录接口
  rpc Login (CustomerLogin) returns (CustomerLoginRes)  {
    option (google.api.http) = {
      post: "/users/customer/login",
    };
  }
  //验证码登录
  rpc LoginForCode (CustomerLogin) returns (CustomerLoginRes)  {
    option (google.api.http) = {
      post: "/users/customer/login-code",
    };
  }
  //登出
  rpc Logout (NullReq) returns (NullReply)  {
    option (google.api.http) = {
      post: "/users/customer/logout",
    };
  }
  //当前登录用户信息
  rpc UserInfo (NullReq) returns (Customer)  {
    option (google.api.http) = {
      get: "/users/customer/info",
    };
  }
  //发送短信/邮箱验证码
  rpc Captcha(CaptchaReq)returns(NullReply){
    option (google.api.http) = {
      get: "/users/customer/captcha",
    };
  }
  //账户列表
  rpc List (CustomerListOption) returns (CustomerList)  {
    option (google.api.http) = {
      get: "/users/customer",
    };
  }
  //获取账户信息
  rpc Get (CustomerGetOption) returns (Customer)  {
    option (google.api.http) = {
      get: "/users/customer/{id}",
    };
  }
  //更新用户信息
  rpc Update (CustomerOption) returns (Customer)  {
    option (google.api.http) = {
      put: "/users/customer",
    };
  }
}

//短信验证码
message CaptchaReq{
  //接收对象 email
  string to=1;
  //本地验证码
  string captcha=2;
  //极验预留
  string challenge=3;
  //极验预留
  string tk=4;
}

//用户登录
message CustomerLogin{
  // 账户
  string account = 1;
  // 密码
  string password = 2;
  // 验证码
  string captcha = 3;
  // 短信、邮箱 验证码
  string code = 4;
}

//登录返回
message CustomerLoginRes{
  // jwt token
  string token = 1;
  // 角色
  string role = 2;
  // 过期时间 字符串时间戳
  int64 expiration_time = 3;
  // 用户信息
  Customer customer = 4;
}

message CustomerListOption {
  //名称昵称筛选
  string name = 1;
  //标签筛选
  string tag = 2;
  //邮箱筛选
  string email = 3;
  //手机筛选
  string mobile = 4;
  //性别筛选
  string sex = 5;
  //角色筛选
  string role = 6;
  //用户类型筛选
  string type = 7;
  //创建时间筛选
  string create_time = 8;
}

message CustomerGetOption{
  int64 id=1;
}

message CustomerOption {
  // 姓名
  string name = 1;
  // 账户
  string account = 2;
  // 昵称
  string nick_name = 4;
  // 角色
  string role = 5;
  // 邮箱
  string email = 6;
  // 手机
  string mobile = 7;
  // 身份证
  string id_card = 8;
  // 密码
  string password = 9;
  // 性别
  string sex = 10;
  // 生日
  google.protobuf.Timestamp birthday = 11;
  // id
  int64 id = 12;
  // 头像
  string avatar=13;
}

message CustomerDeleteOption {
  int64 id = 1;
}

message CustomerList {
  //用户列表
  repeated Customer list =1;
}

// 用户信息
message Customer{
  int64 id = 1;
  string uuid = 2;
  // 姓名
  string name = 3;
  // 账户
  string account = 4;
  // 昵称
  string nick_name = 5;
  // 角色
  string role = 6;
  // 邮箱
  string email = 7;
  // 手机
  string mobile = 8;
  // 身份证
  string id_card = 9;
  // 性别
  string sex = 11;
  //生日
  google.protobuf.Timestamp birthday = 12;
  //最后登录ip
  string last_ip = 13;
  //最后登录时间
  google.protobuf.Timestamp last_time = 14;
  //创建时间
  google.protobuf.Timestamp create_time = 15;
  //更新时间
  google.protobuf.Timestamp update_time = 16;
  //头像
  string avatar=17;
}
message NullReq{}
message NullReply{}
